--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,17 +1,18 @@
 [toolchain]
+anchor_version = "0.31.1"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.devnet]
-alons_box = "FMczpL5fdYdQhvTq7jKHkg5F9emaYHCYF8bdZJQbgnC1"
+alons_box = "J5LMxDvUSz5Agbo3bjpJZN17p4BNfqGNbrhU5vqNYrEa"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "Devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
