--- a/programs/alons-box/Cargo.toml
+++ b/programs/alons-box/Cargo.toml
@@ -17,5 +17,10 @@ default = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
-blake3 = ">=1.3.1, <1.8"
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
+
+# Pin blake3 to pre-edition2024 version. Solana platform-tools
+# bundle rustc 1.84 which can't parse edition2024 crates.
+# solana-blake3-hasher requires blake3 ^1.5.5, so =1.5.5 satisfies it.
+# Remove this pin once platform-tools ship rustc 1.85+.
+blake3 = "=1.5.5"
