Explicit rollover tracking and payout math
Introduce explicit rollover accounting and switch payout calculations to use it. Adds GameState.rollover_balance (u64) and stop deriving rollover from the vault balance; rollover is read at round creation and updated on settle/expire/emergency_expire. Rollover is now computed as a residual (pool - winner - evidence - treasury) to capture integer-division rounding dust and preserve previous rollover on expire (deposits are split, old rollover is kept).

Code changes: make GameState writable where needed, remove vault-derived rollover from create_round, compute payouts from deposits-only for expire/emergency_expire, update emergency_expire to update game_state.rollover_balance, and emit rollover_out in RoundSettled/RoundExpired/EmergencyExpired events. Update PDA sizes and vault invariants accordingly.

Docs & tests: update README and many docs to reflect new rollover semantics, add detailed testing file (tests/rollover-accounting.ts) and expand test counts, and include a walkthrough asset. Also add localnet program config to Anchor.toml.

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,6 +5,9 @@ anchor_version = "0.31.1"
 resolution = true
 skip-lint = false
 
+[programs.localnet]
+alons_box = "J5LMxDvUSz5Agbo3bjpJZN17p4BNfqGNbrhU5vqNYrEa"
+
 [programs.devnet]
 alons_box = "J5LMxDvUSz5Agbo3bjpJZN17p4BNfqGNbrhU5vqNYrEa"
 
